--- a/Examen 1/Examen_4.html
+++ b/Examen 1/Examen_4.html
@@ -8,8 +8,9 @@
 </head>
 
 <body>
-<img src="uaslp_logo.jpg" alt="">
-	<img src="ingenieria_logo.jpg" alt="">
+	<img src="uaslp_logo.jpg" alt="" id="img1">
+	
+	<img src="ingenieria_logo.jpg" alt="" id="img2">
 	<br>
 	<ul>
 		<li>Inicio</li>
