--- a/Examen 1/Examen_1.html
+++ b/Examen 1/Examen_1.html
@@ -8,7 +8,8 @@
 </head>
 
 <body>
-	<img src="uaslp_logo.jpg" alt="">
+	<img src="uaslp_logo.jpg" alt="" id="img1">
+	
 	<img src="ingenieria_logo.jpg" alt="" id="img2">
 	<br>
 	<ul id="menu">
